@@ -71,7 +71,15 @@ allprojects {
                 suspend = true
             }
 
-            jvmArgs += '--illegal-access=permit'
+            // Since JDK 17 the default access to the following
+            // packages is "deny". We need to open them in order
+            // to gain access in GDS / Neo4j.
+            jvmArgs += '--add-opens=java.base/java.lang=ALL-UNNAMED'
+            jvmArgs += '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+            jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
+            jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
+            jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
+
             maxHeapSize = "3G"
             useJUnitPlatform {
                 includeEngines 'junit-jupiter'
@@ -94,7 +102,16 @@ allprojects {
             targetCompatibility = JavaVersion.VERSION_11
             options.warnings = true
             options.encoding = 'UTF-8'
-            options.forkOptions.jvmArgs += '--illegal-access=permit'
+
+            // Since JDK 17 the default access to the following
+            // packages is "deny". We need to open them in order
+            // to gain access in GDS / Neo4j.
+            options.forkOptions.jvmArgs += '--add-opens=java.base/java.lang=ALL-UNNAMED'
+            options.forkOptions.jvmArgs += '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+            options.forkOptions.jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
+            options.forkOptions.jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
+            options.forkOptions.jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
+
             options.compilerArgs += [
                     '-parameters',
                     '-Xlint:all,-cast,-deprecation,-processing,-serial,-try,-unchecked,-varargs',
